--- a/index.html
+++ b/index.html
@@ -969,10 +969,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <!-- Thumbnail Navigation -->
       <div class="thumbnail-container mt-3">
-        <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
-        <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
-        <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
-        <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
+        <img onclick="changeImage('images/projects/2.1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="thumbnail">
+        <img onclick="changeImage('images/projects/2.1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="thumbnail">
+        <img onclick="changeImage('images/projects/2.1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="thumbnail">
+        <img onclick="changeImage('images/projects/2.1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="thumbnail">
         <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
         <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="thumbnail">
       </div>
