--- a/index.html
+++ b/index.html
@@ -957,8 +957,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 
 
-
-
 <!-- Project Modal Dialog 2 -->
 <div id="project2" class="container zoom-anim-dialog mfp-hide">
   <div class="row">
@@ -966,34 +964,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Main Image Display with Navigation Arrows -->
       <div class="main-image-container position-relative">
         <button class="carousel-arrow main-carousel-arrow prev" onclick="prevMainImage()">❮</button>
-        <img id="mainImage" src="images/projects/1-960x540.jpg" alt="Project Image" class="img-fluid">
+        <img id="mainImage" src="images/projects/2.1-960x540.jpg" alt="Project Image" class="img-fluid">
         <button class="carousel-arrow main-carousel-arrow next" onclick="nextMainImage()">❯</button>
       </div>
       <!-- Thumbnails Carousel -->
       <div class="thumbnail-carousel d-flex align-items-center justify-content-center mt-4">
         <button class="carousel-arrow" onclick="slideThumbnails('left')">❮</button>
         <div class="thumbnail-container d-flex overflow-hidden">
-          <img onclick="changeImage('images/projects/1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="img-thumbnail" alt="Thumbnail 1">
-          <img onclick="changeImage('images/projects/2-960x540.jpg')" src="images/projects/2.2-960x540.jpg" class="img-thumbnail" alt="Thumbnail 2">
-          <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/2.3-960x540.jpg" class="img-thumbnail" alt="Thumbnail 3">
-          <img onclick="changeImage('images/projects/4-960x540.jpg')" src="images/projects/2.4-960x540.jpg" class="img-thumbnail" alt="Thumbnail 4">
-          <img onclick="changeImage('images/projects/5-960x540.jpg')" src="images/projects/2.5-960x540.jpg" class="img-thumbnail" alt="Thumbnail 5">
-          <img onclick="changeImage('images/projects/6-960x540.jpg')" src="images/projects/2.6-960x540.jpg" class="img-thumbnail" alt="Thumbnail 6">
-          <img onclick="changeImage('images/projects/7-960x540.jpg')" src="images/projects/7-960x540.jpg" class="img-thumbnail" alt="Thumbnail 7">
-          <img onclick="changeImage('images/projects/8-960x540.jpg')" src="images/projects/8-960x540.jpg" class="img-thumbnail" alt="Thumbnail 8">
+          <img onclick="changeImage('images/projects/2.1-960x540.jpg')" src="images/projects/2.1-960x540.jpg" class="img-thumbnail" alt="Thumbnail 1">
+          <img onclick="changeImage('images/projects/2.2-960x540.jpg')" src="images/projects/2.2-960x540.jpg" class="img-thumbnail" alt="Thumbnail 2">
+          <img onclick="changeImage('images/projects/2.3-960x540.jpg')" src="images/projects/2.3-960x540.jpg" class="img-thumbnail" alt="Thumbnail 3">
+          <img onclick="changeImage('images/projects/2.4-960x540.jpg')" src="images/projects/2.4-960x540.jpg" class="img-thumbnail" alt="Thumbnail 4">
+          <img onclick="changeImage('images/projects/2.5-960x540.jpg')" src="images/projects/2.5-960x540.jpg" class="img-thumbnail" alt="Thumbnail 5">
+          <img onclick="changeImage('images/projects/2.6-960x540.jpg')" src="images/projects/2.6-960x540.jpg" class="img-thumbnail" alt="Thumbnail 6">
  
         </div>
         <button class="carousel-arrow" onclick="slideThumbnails('right')">❯</button>
       </div>
     </div>
     <div class="col-lg-4">
-      <h3 class="project-detail-title">Skan Hous 1.0 - Pinheirinho Itu</h3>
-      <p class="project-detail-text">Construída em um terreno de 20.000 m² cercada por uma natureza exuberante, este projeto modular da Arquiteta Alessandra Pretti de 350 m² foi erguido em menos de 7 meses.</p>
+      <h3 class="project-detail-title">Skan Hous by FPoles</h3>
+      <p class="project-detail-text">Projetada pelo arquiteto Fernando Poles e sua equipe, este projeto Modula de Alto Padrão representa um marco na construção modular em madeira engenheirada. Sustentável e elegante, este projeto permite a construção de casas que vão de 500 a 1.500 metros quadrados.</p>
       <ul class="project-detail-list text-dark">
-        <li><span class="left">Clientes:</span><span class="right">Pedro e Bianca</span></li>
-        <li><span class="left">Entrega:</span><span class="right">Setembro 2023</span></li>
-        <li><span class="left">Tipo de Projeto:</span><span class="right">Residência Modular</span></li>
-        <li><span class="left">Arquiteta:</span><span class="right">Alessandra Pretti</span></li>
+        <li><span class="left">Cliente:</span><span class="right">Skan Hous</span></li>
+        <li><span class="left">Entrega:</span><span class="right">Fevereiro 2025</span></li>
+        <li><span class="left">Tipo de Projeto:</span><span class="right">Modular MLC Alto Padrão</span></li>
+        <li><span class="left">Arquiteta:</span><span class="right">FPoles Arquitetos</span></li>
       </ul>
       <div class="project-detail-meta">
         <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
