--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">A sofisticação da<br> Madeira Engenheirada<br> F:Poles
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">A sofisticação da<br> Madeira Engenheirada<br> FPoles
               </div>
 
 
@@ -698,8 +698,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous <br>Woodframe<br>by F: Poles</h3>
-                <p class="project-description">Criada pelo conceituado escritório F: Poles, este projeto foi desenvovido para o Lago Azul, todo feito em Madeira Engenheirada.</p>
+                <h3 class="project-title">Skan Hous <br>Woodframe<br>by FPoles</h3>
+                <p class="project-description">Criada pelo conceituado escritório FPoles e sua equipe com Madeira Engenheirada.</p>
               </div>
             </div>
             <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
