--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous <br>Woodframe<br>by FPoles</h3>
+                <h3 class="project-title">Skan Hous <br>Woodframe<br>by FPoles Arquitetos</h3>
                 <p class="project-description">Criada pelo conceituado escritório FPoles e sua equipe com Madeira Engenheirada.</p>
               </div>
             </div>
@@ -710,7 +710,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>Alessandra Pretti</h3>
+                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>by Alessandra Pretti</h3>
                 <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou espaços para deixar a família e seus convidados a vontade. </p>
               </div>
             </div>
@@ -1168,7 +1168,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Main Image Display with Navigation Arrows -->
       <div class="main-image-container position-relative">
         <button class="carousel-arrow main-carousel-arrow prev" onclick="prevMainImage()">❮</button>
-        <img id="mainImage" src="images/projects/1-960x540.jpg" alt="Project Image" class="img-fluid">
+        <img id="mainImage" src="images/projects/3.1-960x540.jpg" alt="Project Image" class="img-fluid">
         <button class="carousel-arrow main-carousel-arrow next" onclick="nextMainImage()">❯</button>
       </div>
       <!-- Thumbnails Carousel -->
